use alpha konserve version